--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 		<div class="grid-item-box2">
 			<div class="content-box1">
 				<div class="maan">
-					<img src="img/maan.png" class="maanfoto">
+					<img src="#" id="img">
 				</div>
 				<div class="zon">
-					<img src="img/zon.png" class="zonfoto">
+					<img src="#" id="img2">
 				</div>
 			</div>
 		</div>
 		<div class="grid-item-box3">
 			<div class="content-box2">
+				<h1 id="message"></h1>
+				<h2 id="datum"></h2>
 				<div id="tijd"></div><br>
 				<div id="klok">
 				  <div class="num num1"><div>1</div></div>
