--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>Mars Klok</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="challenge2.css">
+	<link rel="stylesheet" type="text/css" href="style/challenge2.css">
 </head>
 <body>
 	<div class="grid-container">
@@ -13,6 +13,7 @@
 				<h1 class="titel">Tijd</h1>
 			</header>
 		</div>
+		<!--De twee animatie met iconen worden in js aangesproken-->
 		<div class="grid-item-box2">
 			<div class="content-box1">
 				<div class="maan">
@@ -23,6 +24,7 @@
 				</div>
 			</div>
 		</div>
+		<!--Hier komt de klok-->
 		<div class="grid-item-box3">
 			<div class="content-box2">
 				<h1 id="message"></h1>
@@ -48,7 +50,8 @@
 			</div>
 		</div>
 	</div>
+	<!--Tweenmax hierzo-->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
-	<script type="text/javascript" src="challenge2.js"></script>
+	<script type="text/javascript" src="js/challenge2.js"></script>
 </body>
 </html>
